--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,24 @@
 buildscript {
     repositories {
+        maven { url = 'https://files.minecraftforge.net/maven' }
+        jcenter()
         mavenCentral()
-        maven { url = "https://files.minecraftforge.net/maven" }
-        maven {
-            name = 'sponge'
-            url = 'https://repo.spongepowered.org/maven'
-        }
-        repositories {
-            maven {
-                url "https://plugins.gradle.org/m2/"
-
-            }
-        }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
     }
 }
-
-//Gradle Plugins
-plugins {
-    id 'java'
-}
+        
 apply plugin: 'net.minecraftforge.gradle'
+// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-apply plugin: 'org.spongepowered.mixin'
+
+version = '1.0'
+group = 'com.iterator.beubassclientmod' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'beubassclientmod'
+
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 compileJava.options.encoding = 'UTF-8'
 
@@ -34,115 +26,107 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-
-//Build variables
-version = "1.0"
-group = "com.iterator.beubassclientmod"
-archivesBaseName = "beubassclientmod"
-
-
-//Gradle Repositories
-repositories {
-    maven { url 'https://jitpack.io' }
-    maven {
-        name = 'sponge'
-        url = 'https://repo.spongepowered.org/maven'
-    }
-    maven { url "https://nexus.vankka.dev/repository/maven-public/" }
-    maven { url "https://repository.dev.gotan.io/repository/gotan.os/" }
-    maven { url "https://repo.opencollab.dev/maven-snapshots" }
-    maven { url "https://repo.opencollab.dev/maven-releases" }
-    maven {
-        name = 'sonatype-oss'
-        url = 'https://oss.sonatype.org/content/repositories/snapshots/'
-    }
-    maven{
-        name = 'howaner'
-        url = "https://repo.howaner.de/"
-    }
+compileJava {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
 
-//Forge
+sourceSets {
+    main { output.resourcesDir = output.classesDir }
+}
+
 minecraft {
-    mappings channel: 'official', version: '1.16.5'
+    // The mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   Snapshot are built nightly.
+    // stable_#            Stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // Simply re-run your setup task after changing the mappings to update your workspace.
+    //mappings channel: 'snapshot', version: '20171003-1.12'
+    mappings channel: 'snapshot', version: '20171003-1.12'
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    
+    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
-            workingDirectory project.file('runClient')
+            workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
-            // The markers can be added/removed as needed separated by commas.
-            // "SCAN": For mods scan.
-            // "REGISTRIES": For firing of registry events.
-            // "REGISTRYDUMP": For getting the contents of all registries.
-            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             // Recommended logging level for the console
-            // You can set various levels here.
-            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
-
-            arg "-mixin.config=beubassclientmod.mixins.json"
-
-            mods {
-                beubassclientmod {
-                    source sourceSets.main
-                }
-            }
         }
 
         server {
-            workingDirectory project.file('run')
+
             // Recommended logging data for a userdev environment
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
-            mods {
-                beubassclientmod {
-                    source sourceSets.main
-                }
-            }
         }
     }
 }
 
-
-//ShadowJar
-configurations {
-    embed
-    compileOnly.extendsFrom(embed)
-}
-
-//Dependencies
 dependencies {
+    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
+    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
+    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
+    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2855'
 
-    // =========  Minecraft Forge =============
-    minecraft 'net.minecraftforge:forge:1.16.5-36.1.66'
+    // You may put jars on which you depend on in ./libs or you may define them like so..
+    // compile "some.group:artifact:version:classifier"
+    // compile "some.group:artifact:version"
 
-    //Mixin
-    annotationProcessor 'org.spongepowered:mixin:0.8.2:processor'
+    // Real examples
+    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
+    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+
+    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
+    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // These dependencies get remapped to your current MCP mappings
+    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // For more info...
+    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
+    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
 }
 
-
-//Mixin
-mixin {
-    add sourceSets.main, 'beubassclientmod.refmap.json'
-}
-
-//Manifest attributes
+// Example for how to get properties into the manifest for reading by the runtime..
 jar {
-    classifier = "1.16"
     manifest {
         attributes([
-                'Maven-Artifact'          : "${project.group}:${project.archivesBaseName}:${project.version}",
-                'Timestamp'               : System.currentTimeMillis(),
-                "Specification-Title"     : "beubassclientmod",
-                "Specification-Vendor"    : "beubassclientmod",
-                "Specification-Version"   : "1", // We are version 1 of ourselves
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "beubassclientmod",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'MixinConnector'          : 'com.iterator.beubassclientmod.MixinConnector'
+            "Specification-Title": "examplemod",
+            "Specification-Vendor": "examplemodsareus",
+            "Specification-Version": "1", // We are version 1 of ourselves
+            "Implementation-Title": project.name,
+            "Implementation-Version": "${version}",
+            "Implementation-Vendor" :"examplemodsareus",
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
+    }
+}
+
+// Example configuration to allow publishing using the maven-publish task
+// This is the preferred method to reobfuscate your jar file
+jar.finalizedBy('reobfJar') 
+// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
+//publish.dependsOn('reobfJar')
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact jar
+        }
+    }
+    repositories {
+        maven {
+            url "file:///${project.projectDir}/mcmodsrepo"
+        }
     }
 }
